--- a/iptv.html
+++ b/iptv.html
@@ -35,23 +35,16 @@ header-img: "img/bg5.jpg"
   <tr>
     <td width="397"><div align="center">廣東體育</div></td>
   </tr>
-  <tr><div align="center"><td height="237"><a href="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
+  <tr>
+    <td height="237"><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/GDPE.jpg" width="400" height="400" /></a></td>
   </tr>
-
- <td><div align="center"><input type="text" size="20" id="url" value="http://125.88.67.16:30001/PLTV/88888905/224/3221227484/10000100000000060000000003928833_0.smil">
-<script type="text/javascript">
-function copyUrl(){
- var url = document.getElementById("url").value;
- window.clipboardData.setData("Text",url);
- alert("复制链接成功！");
-}
-</script>
-<input type="button" value="复制链接" onClick="url.select();document.execCommand('Copy')">
-    </div></td>
+  <tr>
+    <td><div align="center">有延遲</div></td>
   </tr>
 </table>
 </body>
 </html>
+
 
 <table width="400" height="311" border="0">
   <tr>
@@ -105,7 +98,7 @@ function copyUrl(){
     <td width="397"><div align="center">CCTV-5</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://223.110.243.149/PLTV/3/224/3221227166/index.m3u8"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://zikbo.lofter.com/cctv5"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">延遲2分鐘左右</div></td>
@@ -120,7 +113,7 @@ function copyUrl(){
   <tr>
     <td width="397"><div align="center">CCTV-5+</div></td>
   </tr>
-  <tr><div align="center"><td height="237"><a href="http://14.29.6.242:30001/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
+  <tr><div align="center"><td height="237"><a href="http://zikbo.lofter.com/cctv5p"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/cctv5p.jpg" width="400" height="400" /></a></td>
 </tr>
   <tr>
     <td><div align="center">需複製連結</div></td>
@@ -138,7 +131,7 @@ function copyUrl(){
     <td width="397"><div align="center">翡翠台</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&Fsv_chan_hls_se_idx=30&Fsv_ctype=LIVES&version=9&Fsv_rate_id=1&Fsv_otype=1&FvSeid=5abd1660af1babb4&Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&Provider_id=00000000&Fsv_filetype=1&Fsv_ShiftEnable=0&Fsv_SV_PARAM1=0&Fsv_ShiftTsp=240&Fsv_CMSID=00000000&AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvb.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://zikbo.lofter.com/tvbgd"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvb.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">廣東版</div></td>
@@ -168,7 +161,7 @@ function copyUrl(){
     <td width="397"><div align="center">TVB</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://pulllive-al.wasu.cn/live/6b318893285ee18bfe3b88f4e9c5cc42.m3u8?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://zikbo.lofter.com/tvbhk"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/tvbhk.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新，香港版</div></td>
@@ -182,7 +175,7 @@ function copyUrl(){
     <td width="397"><div align="center">ViuTV</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="rtmp://al3-flv.live.huajiao.com:1935/live/1530693798?k=98B59897BE213AAFC6819487"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://zikbo.lofter.com/viutv"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/viutv.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
@@ -196,7 +189,7 @@ function copyUrl(){
     <td width="397"><div align="center">無綫新聞</div></td>
   </tr>
   <tr>
-    <td height="237"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/bfc36936-87d4-11e8-9dad-0050569023d7/qh33qv/newslive/smil:mobilehd_inews.smil/playlist.m3u8?token=bc263d05530ed89bc1ca524b2518b348_1531707245_1531707245"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
+    <td height="237"><a href="http://zikbo.lofter.com/inews"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/inews.jpg" width="400" height="400" /></a></td>
   </tr>
   <tr>
     <td><div align="center">不定期更新</div></td>
