--- a/iptv.html
+++ b/iptv.html
@@ -464,7 +464,7 @@ header-img: "img/bg5.jpg"
     <td colspan="3">Download： </td>
   </tr>
   <tr>
-    <td colspan="3"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/TXT08A.zip">txtl格式</a> <a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/DPL08A.zip">dpl格式</a></td>
+    <td colspan="3"><a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/TXT08A.zip">txt格式</a> <a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/DPL08A.zip">dpl格式</a></td>
   </tr>
 </table>
 </body>
