--- a/bookmarks.html
+++ b/bookmarks.html
@@ -54,7 +54,7 @@ header-img: "img/bg6.jpg"
     <td><a href="https://www.pornhub.com/">Pornhub</a></td>
     <td><a href="https://www.xvideos.com/">XVIDEOS</a></td>
     <td><a href="https://www.4443dd.com/">SiHu</a></td>
-    <td><a href="chaturbate.com">Chaturbate</a></td>
+    <td><a href="https://chaturbate.com">Chaturbate</a></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
