--- a/iptv.html
+++ b/iptv.html
@@ -339,28 +339,28 @@ OFrWyxI+tteLTJnZKT7Lg8BRYQNXMQU=">A</a> <a href="rtsp://125.88.54.18/PLTV/888889
   </tr>
   <tr>
     <td>61</td>
-    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227108/10000100000000060000000000937811_0.smil">湖南衛視</a></td>
-    <td>&nbsp;</td>
+    <td><a href="rtsp://113.136.42.39:554/PLTV/88888888/224/3221226085/10000100000000060000000001759102_0.smil">湖南衛視</a></td>
+    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227108/10000100000000060000000000937811_0.smil">A</a></td>
   </tr>
   <tr>
     <td>62</td>
-    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227137/10000100000000060000000000937809_0.smil">浙江衛視</a></td>
-    <td>&nbsp;</td>
+    <td><a href="rtsp://113.136.42.39:554/PLTV/88888888/224/3221226088/10000100000000060000000001759097_0.smil">浙江衛視</a></td>
+    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227137/10000100000000060000000000937809_0.smil">A</a></td>
   </tr>
   <tr>
     <td>63</td>
-    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227160/10000100000000060000000000937810_0.smil">江蘇衛視</a></td>
-    <td>&nbsp;</td>
+    <td><a href="rtsp://113.136.42.40:554/PLTV/88888888/224/3221226090/10000100000000060000000001759099_0.smil">江蘇衛視</a></td>
+    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227160/10000100000000060000000000937810_0.smil">A</a></td>
   </tr>
   <tr>
     <td>64</td>
-    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227154/10000100000000060000000000937801_0.smil">安徽衛視</a></td>
+    <td><a href="rtsp://113.136.42.40:554/PLTV/88888888/224/3221226129/10000100000000060000000001794852_0.smil">安徽衛視</a></td>
     <td>&nbsp;</td>
   </tr>
   <tr>
     <td>65</td>
     <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227346/10000100000000060000000003100521_0.smil">天津衛視</a></td>
-    <td>&nbsp;</td>
+    <td><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227346/10000100000000060000000003100521_0.smil">A</a></td>
   </tr>
   <tr>
     <td>66</td>
