--- a/bookmarks.html
+++ b/bookmarks.html
@@ -14,32 +14,28 @@ header-img: "img/bg6.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 <p>
-</head>
-
-
-<table width="300" border="0">
+<body>
+<table width="400" border="0">
   <tr>
-    <td colspan="4"><strong>Search</strong></td>
+    <td colspan="4">Search</td>
   </tr>
   <tr>
-    <td width="78"><a href="https://www.google.com/ncr">Google</a></td>
-    <td width="104"><a href="https://cn.bing.com/">Bing</a></td>
-    <td width="95"><a href="https://zh.wikipedia.org/">Wikipedia</a></td>
-    <td width="72"><a href="https://m.baidu.com/?pu=sz%401321_480">Baidu</a></td>
+    <td><a href="https://www.google.com/ncr">Google</a></td>
+    <td><a href="https://cn.bing.com/">Bing</a></td>
+    <td><a href="https://zh.wikipedia.org/">Wikipedia</a></td>
+    <td><a href="https://m.baidu.com/?pu=sz%401321_480">Baidu</a></td>
   </tr>
   <tr>
-    <td colspan="4"><strong>Translation</strong></td>
+    <td colspan="4">Translation</td>
   </tr>
   <tr>
-    <td colspan="2"><a href="https://translate.google.cn/">Google Translation</a></td>
-    <td colspan="2"><a href="https://www.bing.com/translator/">Bing Translation</a></td>
+    <td><a href="https://translate.google.cn/">Google Translation</a></td>
+    <td><a href="https://www.bing.com/translator/">Bing Translation</a></td>
+    <td><a href="https://translate.yandex.ru/?lang=zh-en">Yandex Translation</a></td>
+    <td><a href="https://fanyi.baidu.com/?aldtype=16047#auto/zh">Baidu Translation</a></td>
   </tr>
   <tr>
-    <td colspan="2"><a href="https://translate.yandex.ru/?lang=zh-en">Yande Translation</a></td>
-    <td colspan="2"><a href="https://fanyi.baidu.com/?aldtype=16047#auto/zh">Baidu Translation</a></td>
-  </tr>
-  <tr>
-    <td colspan="4"><strong>BBS</strong></td>
+    <td colspan="4">BBS</td>
   </tr>
   <tr>
     <td><a href="https://tieba.baidu.com/index.html">TieBa</a></td>
@@ -48,30 +44,34 @@ header-img: "img/bg6.jpg"
     <td><a href="http://www.oneplusbbs.com/">OnePlus</a></td>
   </tr>
   <tr>
+    <td colspan="4">Cloud</td>
+  </tr>
+  <tr>
+    <td><a href="http://192.168.0.1/">Router</a></td>
+    <td><a href="https://plus.google.com/communities/103542666306656189846">SSR-G+</a></td>
+    <td><a href="https://github.com/gfw-breaker/ssr-accounts">SSR-Github</a></td>
+    <td><a href="https://doub.io/sszhfx/">DouBi</a></td>
+  </tr>
+  <tr>
     <td colspan="4">H</td>
   </tr>
   <tr>
-    <td><a href="https://www.pornhub.com/">Pornhub</a></td>
     <td><a href="https://www.xvideos.com/">XVIDEOS</a></td>
     <td><a href="https://www.4443dd.com/">SiHu</a></td>
-    <td><a href="https://chaturbate.com">Chaturbate</a></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td colspan="4">Other</td>
+  </tr>
+  <tr>
+    <td><a href="http://www.yueyv.cn/">Yueyv</a></td>
+    <td><a href="http://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">Cantonese</a></td>
+    <td><a href="https://hbpoon.github.io/iptv/">IPTV</a></td>
     <td>&nbsp;</td>
   </tr>
 </table>
 </body>
-
-</html>
 </html>
 
 
