--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,6 @@ header-img: "img/fm/05.jpg"
 
 <!-- Chinese Version -->
 <div class="zh post-container">
-<p>
 <body>
 <table width="400" border="0">
   <tr>
@@ -64,7 +63,7 @@ header-img: "img/fm/05.jpg"
     <td><div align="center"><a href="https://plus.google.com/communities/103542666306656189846">SSR-G+</a></div></td>
   </tr>
   <tr>
-    <td><div align="center"><a href="https://github.com/gfw-breaker/ssr-accounts">SSR-Github</a></div></td>
+    <td><div align="center"><a href="https://github.com/gfw-breaker/ssr-accounts/blob/master/README.md">SSR-Github</a></div></td>
     <td><div align="center"><a href="https://doub.io/sszhfx/">DouBi</a></div></td>
   </tr>
   <tr>
@@ -92,5 +91,6 @@ header-img: "img/fm/05.jpg"
 </table>
 </body>
 </html>
+
 
 
