--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,8 +13,10 @@ header-img: "img/fm/05.jpg"
 
 <!-- Chinese Version -->
 <div class="zh post-container">
- 
-<body>
+<p>
+</head>
+
+
 <table width="400" border="0">
   <tr>
     <td colspan="2"><div align="center">Search</div></td>
