--- a/about.html
+++ b/about.html
@@ -17,17 +17,30 @@ header-img: "img/bg1.jpg"
   <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/WYWZJSS2.mp3" />
 </audio>
 
-    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
-    <h5>基本信息</h5>
-    <p><strong>所在地:</strong>廣東 廣州</a> <p>
-    <p><strong>性別:</strong>男</a> <p>
-    <p><strong>生日:</strong>08-16 獅子座</a> <p>
-    <h5>聯繫方式</h5>
-    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
-    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p></blockquote>
-    <p></p>
-</div>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>无标题文档</title>
+</head>
+
+<body>
+<table width="400" height="617" border="0">
+  <tr>
+    <td><div align="center"><img src="me2.png" width="250" height="250"></div></td>
+  </tr>
+  <tr>
+    <td height="317"><p align="center">Hello，我是海斌(HB)</p>
+      <p align="center"><strong>基本信息</strong></p>
+      <p align="center"><strong>所在地:</strong>廣東 廣州</p>
+      <p align="center"><strong>性別:</strong>男</p>
+      <p align="center"><strong>生日:</strong>08-16 獅子座</p>
+      <p align="center"><strong>聯繫方式</strong></p>
+      <p align="center"><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a></p>
+      <p align="center"><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a></p>
+    <p align="center"><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a></p></td>
+  </tr>
+</table>
+</body>
+</html>
 
 
 
