--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ header-img: "img/bg1.jpg"
 <body>
 <table width="400" height="617" border="0">
   <tr>
-    <td><div align="center"><img src="me2.png" width="250" height="250"></div></td>
+    <td><div align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" width="250" height="250"></div></td>
   </tr>
   <tr>
     <td height="317"><p align="center">Hello，我是海斌(HB)</p>
