--- a/about.html
+++ b/about.html
@@ -20,15 +20,15 @@ header-img: "img/bg1.jpg"
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
+<p>
 </head>
 
 <body>
-<table width="400" height="617" border="0">
+<table width="400" height="321" border="0">
   <tr>
-    <td><div align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" width="250" height="250"></div></td>
-  </tr>
-  <tr>
-    <td height="317"><p align="center">Hello，我是海斌(HB)</p>
+    <td height="317"><p align="center">&nbsp;</p>
+      <p align="center"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" alt="" width="200" height="200" /></p>
+      <p align="center">Hello，我是<strong>海斌(HB)</strong></p>
       <p align="center"><strong>基本信息</strong></p>
       <p align="center"><strong>所在地:</strong>廣東 廣州</p>
       <p align="center"><strong>性別:</strong>男</p>
@@ -36,11 +36,10 @@ header-img: "img/bg1.jpg"
       <p align="center"><strong>聯繫方式</strong></p>
       <p align="center"><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a></p>
       <p align="center"><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a></p>
-    <p align="center"><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a></p></td>
+    <p align="center"><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a></p>
+    <p align="center">&nbsp;</p></td>
   </tr>
 </table>
-</body>
-</html>
 
 
 
